// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processColors - converts hex to oklch 1`] = `
"/* Palette */
/* coral */
--palette-coral-100: oklch(73.511% 0.16799 40.24666);
--palette-coral-200: oklch(69.622% 0.19552 32.32143);"
`;

exports[`processColors - converts hex to oklch 2`] = `
[
  [
    "palette.coral.100",
    {
      "key": "--palette-coral-100",
      "sourcePath": "palette.coral.100",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(73.511% 0.16799 40.24666)",
      "variable": "--palette-coral-100: oklch(73.511% 0.16799 40.24666);",
    },
  ],
  [
    "palette.coral.200",
    {
      "key": "--palette-coral-200",
      "sourcePath": "palette.coral.200",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(69.622% 0.19552 32.32143)",
      "variable": "--palette-coral-200: oklch(69.622% 0.19552 32.32143);",
    },
  ],
]
`;

exports[`processColors - generates gradient with color variables 1`] = `
"/* Palette */
/* coral */
--palette-coral-50: oklch(73.58% 0.16378 34.33822);
--palette-coral-90: oklch(73.341% 0.17338 44.64289);
--palette-coral-100: oklch(69.622% 0.19552 32.32143);
/* indigo */
--palette-indigo-100: oklch(51.057% 0.23005 276.96564);
/* Gradients */
/* orangeGradient */
--gradients-orangeGradient-primary: linear-gradient(261.78deg, var(--palette-coral-50) 33.1%, var(--palette-coral-90) 56.3%, var(--palette-coral-100) 65.78%, var(--palette-indigo-100) 84.23%);"
`;

exports[`processColors - generates gradient with color variables 2`] = `
[
  [
    "palette.coral.50",
    {
      "key": "--palette-coral-50",
      "sourcePath": "palette.coral.50",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(73.58% 0.16378 34.33822)",
      "variable": "--palette-coral-50: oklch(73.58% 0.16378 34.33822);",
    },
  ],
  [
    "palette.coral.90",
    {
      "key": "--palette-coral-90",
      "sourcePath": "palette.coral.90",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(73.341% 0.17338 44.64289)",
      "variable": "--palette-coral-90: oklch(73.341% 0.17338 44.64289);",
    },
  ],
  [
    "palette.coral.100",
    {
      "key": "--palette-coral-100",
      "sourcePath": "palette.coral.100",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(69.622% 0.19552 32.32143)",
      "variable": "--palette-coral-100: oklch(69.622% 0.19552 32.32143);",
    },
  ],
  [
    "palette.indigo.100",
    {
      "key": "--palette-indigo-100",
      "sourcePath": "palette.indigo.100",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(51.057% 0.23005 276.96564)",
      "variable": "--palette-indigo-100: oklch(51.057% 0.23005 276.96564);",
    },
  ],
  [
    "gradients.orangeGradient.primary",
    {
      "key": "--gradients-orangeGradient-primary",
      "referencePaths": [
        "palette.coral.50",
        "palette.coral.90",
        "palette.coral.100",
        "palette.indigo.100",
      ],
      "sourcePath": "gradients.orangeGradient.primary",
      "tier": "semantic",
      "type": "gradient",
      "value": "linear-gradient(261.78deg, var(--palette-coral-50) 33.1%, var(--palette-coral-90) 56.3%, var(--palette-coral-100) 65.78%, var(--palette-indigo-100) 84.23%)",
      "variable": "--gradients-orangeGradient-primary: linear-gradient(261.78deg, var(--palette-coral-50) 33.1%, var(--palette-coral-90) 56.3%, var(--palette-coral-100) 65.78%, var(--palette-indigo-100) 84.23%);",
    },
  ],
]
`;

exports[`processColors - handles different color formats 1`] = `
"/* Palette */
/* brand */
--palette-brand-200: oklch(86.644% 0.29483 142.49535);
--palette-brand-300: oklch(45.201% 0.31321 264.05202);
--palette-brand-400: oklch(70% 0.2 270);
--palette-brand-default: oklch(62.796% 0.25768 29.23388);"
`;

exports[`processColors - handles different color formats 2`] = `
[
  [
    "palette.brand.200",
    {
      "key": "--palette-brand-200",
      "sourcePath": "palette.brand.200",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(86.644% 0.29483 142.49535)",
      "variable": "--palette-brand-200: oklch(86.644% 0.29483 142.49535);",
    },
  ],
  [
    "palette.brand.300",
    {
      "key": "--palette-brand-300",
      "sourcePath": "palette.brand.300",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(45.201% 0.31321 264.05202)",
      "variable": "--palette-brand-300: oklch(45.201% 0.31321 264.05202);",
    },
  ],
  [
    "palette.brand.400",
    {
      "key": "--palette-brand-400",
      "sourcePath": "palette.brand.400",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(70% 0.2 270)",
      "variable": "--palette-brand-400: oklch(70% 0.2 270);",
    },
  ],
  [
    "palette.brand.default",
    {
      "key": "--palette-brand-default",
      "sourcePath": "palette.brand.default",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(62.796% 0.25768 29.23388)",
      "variable": "--palette-brand-default: oklch(62.796% 0.25768 29.23388);",
    },
  ],
]
`;

exports[`processColors - handles direct palette groups 1`] = `
"/* Palette */
/* basic */
--palette-basic-white: oklch(100% 0 0);
--palette-basic-black: oklch(0% 0 0);
/* gray */
--palette-gray-950: oklch(14.479% 0 0);
/* Themes */
/* Theme: light */
/* content */
--theme-light-content-primary: var(--palette-gray-950);"
`;

exports[`processColors - handles direct palette groups 2`] = `
[
  [
    "palette.basic.white",
    {
      "key": "--palette-basic-white",
      "sourcePath": "palette.basic.white",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(100% 0 0)",
      "variable": "--palette-basic-white: oklch(100% 0 0);",
    },
  ],
  [
    "palette.basic.black",
    {
      "key": "--palette-basic-black",
      "sourcePath": "palette.basic.black",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(0% 0 0)",
      "variable": "--palette-basic-black: oklch(0% 0 0);",
    },
  ],
  [
    "palette.gray.950",
    {
      "key": "--palette-gray-950",
      "sourcePath": "palette.gray.950",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(14.479% 0 0)",
      "variable": "--palette-gray-950: oklch(14.479% 0 0);",
    },
  ],
  [
    "theme.light.content.primary",
    {
      "key": "--theme-light-content-primary",
      "referencePaths": [
        "palette.gray.950",
      ],
      "sourcePath": "theme.light.content.primary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--palette-gray-950)",
      "variable": "--theme-light-content-primary: var(--palette-gray-950);",
    },
  ],
]
`;

exports[`processColors - handles gradients with atRule 1`] = `
"/* Palette */
/* coral */
--palette-coral-50: oklch(73.58% 0.16378 34.33822);
/* Gradients */
/* orangeGradient */
@media (prefers-color-scheme: dark) {
  --gradients-orangeGradient-primary: linear-gradient(to right, var(--palette-coral-50), var(--palette-coral-50));
}"
`;

exports[`processColors - handles gradients with atRule 2`] = `
[
  [
    "palette.coral.50",
    {
      "key": "--palette-coral-50",
      "sourcePath": "palette.coral.50",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(73.58% 0.16378 34.33822)",
      "variable": "--palette-coral-50: oklch(73.58% 0.16378 34.33822);",
    },
  ],
  [
    "gradients.orangeGradient.primary",
    {
      "key": "--gradients-orangeGradient-primary",
      "referencePaths": [
        "palette.coral.50",
      ],
      "sourcePath": "gradients.orangeGradient.primary",
      "tier": "semantic",
      "type": "gradient",
      "value": "linear-gradient(to right, var(--palette-coral-50), var(--palette-coral-50))",
      "variable": "--gradients-orangeGradient-primary: linear-gradient(to right, var(--palette-coral-50), var(--palette-coral-50));",
    },
  ],
]
`;

exports[`processColors - handles palette colors with atRule 1`] = `
"/* Palette */
/* background */
--palette-background-light: oklch(100% 0 0);
/* backgroundDark */
@media (prefers-color-scheme: dark) {
  --palette-backgroundDark-dark: oklch(0% 0 0);
}"
`;

exports[`processColors - handles palette colors with atRule 2`] = `
[
  [
    "palette.background.light",
    {
      "key": "--palette-background-light",
      "sourcePath": "palette.background.light",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(100% 0 0)",
      "variable": "--palette-background-light: oklch(100% 0 0);",
    },
  ],
  [
    "palette.backgroundDark.dark",
    {
      "key": "--palette-backgroundDark-dark",
      "sourcePath": "palette.backgroundDark.dark",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(0% 0 0)",
      "variable": "--palette-backgroundDark-dark: oklch(0% 0 0);",
    },
  ],
]
`;

exports[`processColors - handles selector + atRule 1`] = `
"/* Palette */
/* base */
--palette-base-primary: oklch(73.511% 0.16799 40.24666);
/* Themes */
/* Theme: dark */
@media (prefers-color-scheme: dark) {
  .dark-theme {
    /* background */
    --theme-dark-background-primary: var(--palette-base-primary);
  }
}"
`;

exports[`processColors - handles selector + atRule 2`] = `
[
  [
    "palette.base.primary",
    {
      "key": "--palette-base-primary",
      "sourcePath": "palette.base.primary",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(73.511% 0.16799 40.24666)",
      "variable": "--palette-base-primary: oklch(73.511% 0.16799 40.24666);",
    },
  ],
  [
    "theme.dark.background.primary",
    {
      "key": "--theme-dark-background-primary",
      "referencePaths": [
        "palette.base.primary",
      ],
      "sourcePath": "theme.dark.background.primary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--palette-base-primary)",
      "variable": "--theme-dark-background-primary: var(--palette-base-primary);",
    },
  ],
]
`;

exports[`processColors - handles string values 1`] = `
"/* Palette */
/* simple */
--palette-simple-white: oklch(100% 0 0);
--palette-simple-black: oklch(0% 0 0);"
`;

exports[`processColors - handles string values 2`] = `
[
  [
    "palette.simple.white",
    {
      "key": "--palette-simple-white",
      "sourcePath": "palette.simple.white",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(100% 0 0)",
      "variable": "--palette-simple-white: oklch(100% 0 0);",
    },
  ],
  [
    "palette.simple.black",
    {
      "key": "--palette-simple-black",
      "sourcePath": "palette.simple.black",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(0% 0 0)",
      "variable": "--palette-simple-black: oklch(0% 0 0);",
    },
  ],
]
`;

exports[`processColors - handles theme variantNameOnly 1`] = `
"/* Palette */
/* simple */
--palette-simple-white: oklch(100% 0 0);
--palette-simple-black: oklch(0% 0 0);
/* Themes */
/* Theme: light */
/* background */
--primary: var(--palette-simple-white);
--secondary: var(--palette-simple-black);"
`;

exports[`processColors - handles theme variantNameOnly 2`] = `
[
  [
    "palette.simple.white",
    {
      "key": "--palette-simple-white",
      "sourcePath": "palette.simple.white",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(100% 0 0)",
      "variable": "--palette-simple-white: oklch(100% 0 0);",
    },
  ],
  [
    "palette.simple.black",
    {
      "key": "--palette-simple-black",
      "sourcePath": "palette.simple.black",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(0% 0 0)",
      "variable": "--palette-simple-black: oklch(0% 0 0);",
    },
  ],
  [
    "theme.light.background.primary",
    {
      "key": "--primary",
      "referencePaths": [
        "palette.simple.white",
      ],
      "sourcePath": "theme.light.background.primary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--palette-simple-white)",
      "variable": "--primary: var(--palette-simple-white);",
    },
  ],
  [
    "theme.light.background.secondary",
    {
      "key": "--secondary",
      "referencePaths": [
        "palette.simple.black",
      ],
      "sourcePath": "theme.light.background.secondary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--palette-simple-black)",
      "variable": "--secondary: var(--palette-simple-black);",
    },
  ],
]
`;

exports[`processColors - handles themes 1`] = `
"/* Palette */
/* simple */
--palette-simple-white: oklch(100% 0 0);
--palette-simple-black: oklch(0% 0 0);
/* Themes */
/* Theme: light */
/* background */
--theme-light-background-primary: var(--palette-simple-white);
--theme-light-background-secondary: var(--palette-simple-black);"
`;

exports[`processColors - handles themes 2`] = `
[
  [
    "palette.simple.white",
    {
      "key": "--palette-simple-white",
      "sourcePath": "palette.simple.white",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(100% 0 0)",
      "variable": "--palette-simple-white: oklch(100% 0 0);",
    },
  ],
  [
    "palette.simple.black",
    {
      "key": "--palette-simple-black",
      "sourcePath": "palette.simple.black",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(0% 0 0)",
      "variable": "--palette-simple-black: oklch(0% 0 0);",
    },
  ],
  [
    "theme.light.background.primary",
    {
      "key": "--theme-light-background-primary",
      "referencePaths": [
        "palette.simple.white",
      ],
      "sourcePath": "theme.light.background.primary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--palette-simple-white)",
      "variable": "--theme-light-background-primary: var(--palette-simple-white);",
    },
  ],
  [
    "theme.light.background.secondary",
    {
      "key": "--theme-light-background-secondary",
      "referencePaths": [
        "palette.simple.black",
      ],
      "sourcePath": "theme.light.background.secondary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--palette-simple-black)",
      "variable": "--theme-light-background-secondary: var(--palette-simple-black);",
    },
  ],
]
`;

exports[`processColors - handles themes referencing gradients 1`] = `
"/* Palette */
/* coral */
--palette-coral-50: oklch(73.58% 0.16378 34.33822);
/* Gradients */
/* orangeGradient */
--gradients-orangeGradient-primary: linear-gradient(to right, var(--palette-coral-50), var(--palette-coral-50));
/* Themes */
/* Theme: light */
/* background */
--theme-light-background-primary: var(--gradients-orangeGradient-primary);"
`;

exports[`processColors - handles themes referencing gradients 2`] = `
[
  [
    "palette.coral.50",
    {
      "key": "--palette-coral-50",
      "sourcePath": "palette.coral.50",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(73.58% 0.16378 34.33822)",
      "variable": "--palette-coral-50: oklch(73.58% 0.16378 34.33822);",
    },
  ],
  [
    "gradients.orangeGradient.primary",
    {
      "key": "--gradients-orangeGradient-primary",
      "referencePaths": [
        "palette.coral.50",
      ],
      "sourcePath": "gradients.orangeGradient.primary",
      "tier": "semantic",
      "type": "gradient",
      "value": "linear-gradient(to right, var(--palette-coral-50), var(--palette-coral-50))",
      "variable": "--gradients-orangeGradient-primary: linear-gradient(to right, var(--palette-coral-50), var(--palette-coral-50));",
    },
  ],
  [
    "theme.light.background.primary",
    {
      "key": "--theme-light-background-primary",
      "referencePaths": [
        "gradients.orangeGradient.primary",
      ],
      "sourcePath": "theme.light.background.primary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--gradients-orangeGradient-primary)",
      "variable": "--theme-light-background-primary: var(--gradients-orangeGradient-primary);",
    },
  ],
]
`;

exports[`processColors - handles themes with selector 1`] = `
"/* Palette */
/* base */
--palette-base-primary: oklch(73.511% 0.16799 40.24666);
/* Themes */
/* Theme: dark */
.dark-theme {
  /* background */
  --theme-dark-background-primary: var(--palette-base-primary);
}"
`;

exports[`processColors - handles themes with selector 2`] = `
[
  [
    "palette.base.primary",
    {
      "key": "--palette-base-primary",
      "sourcePath": "palette.base.primary",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(73.511% 0.16799 40.24666)",
      "variable": "--palette-base-primary: oklch(73.511% 0.16799 40.24666);",
    },
  ],
  [
    "theme.dark.background.primary",
    {
      "key": "--theme-dark-background-primary",
      "referencePaths": [
        "palette.base.primary",
      ],
      "sourcePath": "theme.dark.background.primary",
      "tier": "semantic",
      "type": "color",
      "value": "var(--palette-base-primary)",
      "variable": "--theme-dark-background-primary: var(--palette-base-primary);",
    },
  ],
]
`;

exports[`processColors - handles transparency 1`] = `
"/* Palette */
/* alpha */
--palette-alpha-softGray1: oklch(14.48% 0 0 / 12%);
--palette-alpha-softGray2: oklch(14.48% 0 0 / 24%);"
`;

exports[`processColors - handles transparency 2`] = `
[
  [
    "palette.alpha.softGray1",
    {
      "key": "--palette-alpha-softGray1",
      "sourcePath": "palette.alpha.softGray1",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(14.48% 0 0 / 12%)",
      "variable": "--palette-alpha-softGray1: oklch(14.48% 0 0 / 12%);",
    },
  ],
  [
    "palette.alpha.softGray2",
    {
      "key": "--palette-alpha-softGray2",
      "sourcePath": "palette.alpha.softGray2",
      "tier": "primitive",
      "type": "color",
      "value": "oklch(14.48% 0 0 / 24%)",
      "variable": "--palette-alpha-softGray2: oklch(14.48% 0 0 / 24%);",
    },
  ],
]
`;
